RESOLVED FIXED 100996
[CSS Exclusions] Layout of the first shape-inside line can be incorrect
https://bugs.webkit.org/show_bug.cgi?id=100996
Summary [CSS Exclusions] Layout of the first shape-inside line can be incorrect
Hans Muller
Reported 2012-11-01 16:06:33 PDT
Created attachment 171949 [details] Test case. Sometimes the first line of polygonal shape-inside content doesn't conform to the shape. The attached test case demonstrates the problem.
Attachments
Test case. (1.52 KB, text/html)
2012-11-01 16:06 PDT, Hans Muller
no flags
Patch (6.99 KB, patch)
2012-11-02 16:50 PDT, Hans Muller
no flags
Hans Muller
Comment 1 2012-11-02 16:50:31 PDT
Dirk Schulze
Comment 2 2012-11-05 07:07:31 PST
Comment on attachment 172174 [details] Patch LGTM. r=me.
WebKit Review Bot
Comment 3 2012-11-05 07:25:38 PST
Comment on attachment 172174 [details] Patch Clearing flags on attachment: 172174 Committed r133475: <http://trac.webkit.org/changeset/133475>
WebKit Review Bot
Comment 4 2012-11-05 07:25:41 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.