[CSS Exclusions] Layout of the first shape-inside line can be incorrect https://bugs.webkit.org/show_bug.cgi?id=100996

Patch by Hans Muller <hmuller@adobe.com> on 2012-11-05
Reviewed by Dirk Schulze.

Source/WebCore:

Made the conversion from floating point top/bottom logical shape bounds coordinates
LayoutUnits explicit and corrected the case where the top value was truncated.  A
float logicalTop value is converted to LayoutUnit with fromFloatCeil() to ensure
that the LayoutUnit value is within the shape.

Test: fast/exclusions/shape-inside/shape-inside-shape-logical-top.html

* rendering/ExclusionShapeInsideInfo.h:
(WebCore::ExclusionShapeInsideInfo::shapeLogicalTop): Redefined this method in terms of shapeLogicalBoundsY,Max().
(WebCore::ExclusionShapeInsideInfo::shapeLogicalBottom):  Ditto.
(WebCore::ExclusionShapeInsideInfo::lineOverlapsShapeBounds):  Ditto.
(ExclusionShapeInsideInfo):
(WebCore::ExclusionShapeInsideInfo::shapeLogicalBoundsY): Explicit conversion from floating point shape coordinates to LayoutUnits.
(WebCore::ExclusionShapeInsideInfo::shapeLogicalBoundsMaxY): Ditto.

LayoutTests:

Verify that the first line of shape-inside content is laid out correctly
when the top of the shape's bounds has a non-integral value.

* fast/exclusions/shape-inside/shape-inside-shape-logical-top-expected.html: Added.
* fast/exclusions/shape-inside/shape-inside-shape-logical-top.html: Added.

Canonical link: https://commits.webkit.org/119304@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133475 268f45cc-cd09-0410-ab3c-d52691b4dbfc